<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.bipinexports.productionqr.Activity.ChangepasswordActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/layout_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtUser"
            android:textStyle="bold"
            android:textColor="#AB47BC"
            android:textAllCaps="true"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/imgd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:scaleX="0.45"
            android:scaleY="0.45"
            android:src="@drawable/ic_menu"/>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/change_password"
        android:textColor="#AB47BC"
        android:textSize="25sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_current_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <EditText
            android:id="@+id/txtCurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:drawableStart="@drawable/asset2"
            android:drawablePadding="15dp"
            android:hint="@string/currentpassword"
            android:inputType="textPassword"
            tools:targetApi="o" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <EditText
            android:id="@+id/txtNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/asset2"
            android:drawablePadding="15dp"
            android:hint="@string/newpassword"
            android:inputType="textPassword"
            android:autofillHints="" tools:targetApi="o" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_retype_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <EditText
            android:id="@+id/txtRetypeNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/asset2"
            android:drawablePadding="15dp"
            android:hint="@string/retypenewpassword"
            android:inputType="textPassword"
            android:autofillHints="" tools:targetApi="o" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSubmitPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="#AB47BC"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

</LinearLayout>
